# qtframeless

./: CMakeLists.txt
output/: includeme.cmake  makeme.cmake
src/: qtframeless.cpp  qtframeless.h  qtframeless_global.cpp  qtframeless_global.h  qtgllogger_obj.cpp  qtgllogger_obj.h  utils.cpp  utils.h
src/custom/: toolbutton_righttop_windows10.cpp  toolbutton_righttop_windows10.h  widget_background.cpp  widget_background.h  widget_rubberband_pop.cpp  widget_rubberband_pop.h
src/titlebar/: titlebarlikeandroid.cpp  titlebarlikeandroid.h  titlebarlikeandroid.ui  titlebarlikewindows10.cpp  titlebarlikewindows10.h  titlebarlikewindows10.ui
